fixed pics display bugs

--- a/cic2025/index.html
+++ b/cic2025/index.html
@@ -17,6 +17,10 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!-- v ieee cookie banner v -->
+    <script src="" https://cmp.osano.com/AzyzptTmRlqVd2LRf/530d6a63-68a0-4f3a-9a73-e768af4c1ca4/osano.js""></script>
+    <link rel="" stylesheet"" href="" https://cookie-consent.ieee.org/ieee-cookie-banner.css"" type="" text/css"" />
+    <!-- ^ ieee cookie banner ^ -->
 </head>
 
 <body class="header-fixed">
@@ -4183,7 +4187,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                     <div class="panel-body"> -->
                                         <div class="media">
                                             <div class="media-left">
-                                                <img src="../../common/resources/images/zipei_tu.jpg" class="media-object" alt="Tipei Tu" width="100">
+                                                <img src="../../common/resources/images/zipei_tu.png" class="media-object" alt="Tipei Tu" width="100">
                                             </div>
                                             <div class="media-body">
                                                 <p><a href="about:blank" target="_blank"><strong>Tipei Tu</strong></a></p>
@@ -4233,7 +4237,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                     <div class="panel-body"> -->
                                         <div class="media">
                                             <div class="media-left">
-                                                <img src="../../common/resources/images/haishan_wu.jpg" class="media-object" alt="Haishan Wu" width="100">
+                                                <img src="../../common/resources/images/haishan_wu.png" class="media-object" alt="Haishan Wu" width="100">
                                             </div>
                                             <div class="media-body">
                                                 <p><a href="https://ae.linkedin.com/in/haishan-wu-41252413" target="_blank"><strong>Haishan Wu</strong></a></p>
