replace ieee cs

--- a/cic2025/index.html
+++ b/cic2025/index.html
@@ -4483,7 +4483,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                             </li>
                             <hr>
                             <li>
-                                <img class="img-responsive" src="assets/img/logos/ieee_cs.gif"
+                                <img class="img-responsive" src="assets/img/logos/ieee_cs.png"
                                         style="width: 100%; margin-top: 10%;">
                             </li>
                             <br>
