updated steering committee

--- a/cic2025/index.html
+++ b/cic2025/index.html
@@ -12,7 +12,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
 <!--<![endif]-->
 
 <head>
-    <title>CIC 2025</title>
+    <title>IEEE CIC 2025</title>
     {% include head1.html %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
