--- a/tps2025/steerings/index.html
+++ b/tps2025/steerings/index.html
@@ -27,11 +27,11 @@ title: "blank"
         <!--=== End Header ===-->
         <div class="breadcrumbs">
             <div class="container">
-                <h1 class="pull-left">Organizing Commmittees</h1>
+                <h1 class="pull-left">Steering Commmittees</h1>
                 <ul class="pull-right breadcrumb">
                     <li><a href="{{ site.baseurl }}/">Home</a></li>
                     <!-- <li><a href="">BLANK</a></li> -->
-                    <li class="active">Organizers</li>
+                    <li class="active">Steering</li>
                 </ul>
             </div>
         </div>
@@ -49,9 +49,9 @@ title: "blank"
                             <ul class="no-padding margin-left-10 organizers-type-list hidden-xs" id="sidebar-nav">
                                 <!-- Typography -->
 
-                                <li class=""><a href="#General">Executive Chairs of the Co-located Conferences</a></li>
-                                <li class=""><a href="#Vice">General Co-Chairs</a></li>
-                                <li class=""><a href="#Program">Program Co-Chairs</a></li>
+                                <li class=""><a href="#General">Chair</a></li>
+                                <li class=""><a href="#Members">Members</a></li>
+                                <!-- <li class=""><a href="#Program">Program Co-Chairs</a></li>
                                 <li class=""><a href="#ShortPaperProgram">Blue-Sky/ Vision Track Co-Chairs</a></li>
                                 <li class=""><a href="#BestPaper">Industry/Government Co-Chairs</a></li>
                                 <li class=""><a href="#TestofTimeAward">Tutorial Co-Chairs</a></li>
@@ -60,52 +60,55 @@ title: "blank"
                                 <li class=""><a href="#Publicity">Finance and Local Arrangements Chairs</a></li>
                                 <li class=""><a href="#DoctoralConsortium">Proceedings Chair</a></li>
                                 <li class=""><a href="#Workshop">Publicity Chairs</a></li>
-                                <li class=""><a href="#DemonstrationPaper">Web Co-Chairs</a></li>
+                                <li class=""><a href="#DemonstrationPaper">Web Co-Chairs</a></li> -->
                             </ul>
                         </div>
                         <div class="col-md-9">
                             <div id="organizers">
 
-                                <h2>Conference Organization</h2>
-                                <h4 id="General">Executive Chairs of the Co-located Conferences</h4>
+                                <h2>Steering Committees</h2>
+                                <h4 id="General">Chair</h4>
                                 <ul>
-                                    <li class="person-card">
-                                        <div>
-                                            <a target="_blank" href="http://yichang-cs.com/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Yi_Chang.jpg">Yi Chang</a>
-                                            Jilin University, China
-                                        </div>
+                                    <li >
+                                        <i>James Joshi, University of Pittsburgh, USA</i>
                                     </li>
+                                </ul>
 
-                                    <li class="person-card">
-                                        <div>TBD
-                                            <!-- <a target="_blank" href="http://www.bigdatalab.ac.cn/~cxq/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Xueqi_Cheng.jpg">Xueqi Cheng</a>
-                                            Chinese Academy of Sciences, China -->
-                                        </div>
+                                <h4 id="General">Members</h4>
+                                <ul>
+                                    <li >
+                                        <i>Arun Iyengar, Cisco, USA</i>
                                     </li>
-
-                                    <li class="person-card">
-                                        <div>TBD
-                                            <!-- <a target="_blank" href="http://www.yorku.ca/jhuang/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Jimmy_Huang.jpg">Jimmy Huang</a>
-                                            York University, Canada -->
-                                        </div>
+                                    <li >
+                                        <i>Calton Pu, Georgia Institute of Technology, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Dimitrios Gerogakopolous, Swinsburne University of Technology, Australia</i>
+                                    </li>
+                                    <li >
+                                        <i>Elisa Bertino, Purdue University, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Karl Aberer, EPFL, Switzerland</i>
+                                    </li>
+                                    <li >
+                                        <i>Ling Liu, Georgia Institute of Technology, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>M. Brian Blake, President of Georgia State University, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Tao Zhang, NIST, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Weisong Shi, University of Delaware, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Zhaohui Wu, Zhejiang University, China</i>
                                     </li>
 
                                 </ul>
-
-                                <h4 id="Vice">General Co-Chairs</h4>
-                                <ul>
-                                    <li class="person-card">
-                                        <div>
-                                            <a target="_blank" href="http://www.thuir.cn/group/~YQLiu/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Yiqun_Liu.jpg">Yiqun Liu</a>
-                                            Tsinghua University, China
-                                        </div>
-                                    </li>
-                                </ul>
-                                <h4 id="Program">Program co-Chairs</h4>
+                                <!-- <h4 id="Program">Program co-Chairs</h4>
                                 <ul>
                                     <li class="person-card">
                                         <div>
@@ -322,7 +325,7 @@ title: "blank"
                                             University of Pittsbutgh, U.S.A.
                                         </div>
                                     </li>
-                                </ul>
+                                </ul> -->
                                 <div style="height: 30px; clear: both;"></div>
                                                                
 
