--- a/cic2025/pcs/index.html
+++ b/cic2025/pcs/index.html
@@ -27,11 +27,11 @@ title: "blank"
         <!--=== End Header ===-->
         <div class="breadcrumbs">
             <div class="container">
-                <h1 class="pull-left">Organizing Commmittees</h1>
+                <h1 class="pull-left">Program Committee</h1>
                 <ul class="pull-right breadcrumb">
                     <li><a href="{{ site.baseurl }}/">Home</a></li>
                     <!-- <li><a href="">BLANK</a></li> -->
-                    <li class="active">Organizers</li>
+                    <li class="active">Program</li>
                 </ul>
             </div>
         </div>
@@ -49,9 +49,9 @@ title: "blank"
                             <ul class="no-padding margin-left-10 organizers-type-list hidden-xs" id="sidebar-nav">
                                 <!-- Typography -->
 
-                                <li class=""><a href="#General">Executive Chairs of the Co-located Conferences</a></li>
-                                <li class=""><a href="#Vice">General Co-Chairs</a></li>
-                                <li class=""><a href="#Program">Program Co-Chairs</a></li>
+                                <!-- <li class=""><a href="#General">Chair</a></li> -->
+                                <li class=""><a href="#Members">Members</a></li>
+                                <!-- <li class=""><a href="#Program">Program Co-Chairs</a></li>
                                 <li class=""><a href="#ShortPaperProgram">Blue-Sky/ Vision Track Co-Chairs</a></li>
                                 <li class=""><a href="#BestPaper">Industry/Government Co-Chairs</a></li>
                                 <li class=""><a href="#TestofTimeAward">Tutorial Co-Chairs</a></li>
@@ -60,52 +60,86 @@ title: "blank"
                                 <li class=""><a href="#Publicity">Finance and Local Arrangements Chairs</a></li>
                                 <li class=""><a href="#DoctoralConsortium">Proceedings Chair</a></li>
                                 <li class=""><a href="#Workshop">Publicity Chairs</a></li>
-                                <li class=""><a href="#DemonstrationPaper">Web Co-Chairs</a></li>
+                                <li class=""><a href="#DemonstrationPaper">Web Co-Chairs</a></li> -->
                             </ul>
                         </div>
                         <div class="col-md-9">
                             <div id="organizers">
 
-                                <h2>Conference Organization</h2>
-                                <h4 id="General">Executive Chairs of the Co-located Conferences</h4>
+                                <h2>Program Committees</h2>
+                                <!-- <h4 id="General">Chair</h4>
                                 <ul>
-                                    <li class="person-card">
-                                        <div>
-                                            <a target="_blank" href="http://yichang-cs.com/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Yi_Chang.jpg">Yi Chang</a>
-                                            Jilin University, China
-                                        </div>
+                                    <li >
+                                        <i>James Joshi, University of Pittsburgh, USA</i>
                                     </li>
+                                </ul> -->
 
-                                    <li class="person-card">
-                                        <div>TBD
-                                            <!-- <a target="_blank" href="http://www.bigdatalab.ac.cn/~cxq/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Xueqi_Cheng.jpg">Xueqi Cheng</a>
-                                            Chinese Academy of Sciences, China -->
-                                        </div>
+                                <h4 id="General">Members (Order by Last Name)</h4>
+                                
+                                <ul>
+                                    <li >
+                                        <i>Karl Aberer, Ecole Polytechnique Fédérale de Lausanne, Switzerland</i>
                                     </li>
-
-                                    <li class="person-card">
-                                        <div>TBD
-                                            <!-- <a target="_blank" href="http://www.yorku.ca/jhuang/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Jimmy_Huang.jpg">Jimmy Huang</a>
-                                            York University, Canada -->
-                                        </div>
+                                    <li >
+                                        <i>Tanvir Ahmed, Oracle, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Luca Aygun, University of Parma, Italy</i>
+                                    </li>
+                                    <li >
+                                        <i>Athman Bouguettaya, The University of Sydney, Australia</i>
+                                    </li>
+                                    <li >
+                                        <i>Boualem Benattallah, School of Computer Science and Engineering, UNSW Australia</i>
+                                    </li>
+                                    <li >
+                                        <i>Elisa Bertino, Purdue University, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Pietro Colombo, Università dell'Insubria, Italy</i>
+                                    </li>
+                                    <li >
+                                        <i>Min Chen, University of Washington, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Mohan Baruwa Chhetri, Data61/CSIRO</i>
+                                    </li>
+                                    <li >
+                                        <i>Renhe Jiang, The University of Tokyo, Japan</i>
+                                    </li>
+                                    <li >
+                                        <i>Yoana Jung, Northeastern University, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Taghi Khoshgoftaar, Florida Atlantic University, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Shijun Liu, Shandong University, China</i>
+                                    </li>
+                                    <li >
+                                        <i>Chao Li, Beijing Jiaotong University, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Anupam Panwar, Apple Inc., USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Fahad Saeed, Florida International University, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Shantanu Sharma, New Jersey Institute of Technology, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Hossein Shirazi, San Diego State University, USA</i>
+                                    </li>
+                                    <li >
+                                        <i>Massimo Villari, University of Messina, Italy</i>
+                                    </li>
+                                    <li >
+                                        <i>Jun Zhao , Nanyang Technological University, Singapore</i>
                                     </li>
 
                                 </ul>
-
-                                <h4 id="Vice">General Co-Chairs</h4>
-                                <ul>
-                                    <li class="person-card">
-                                        <div>
-                                            <a target="_blank" href="http://www.thuir.cn/group/~YQLiu/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Yiqun_Liu.jpg">Yiqun Liu</a>
-                                            Tsinghua University, China
-                                        </div>
-                                    </li>
-                                </ul>
-                                <h4 id="Program">Program co-Chairs</h4>
+                                <!-- <h4 id="Program">Program co-Chairs</h4>
                                 <ul>
                                     <li class="person-card">
                                         <div>
@@ -322,7 +356,7 @@ title: "blank"
                                             University of Pittsbutgh, U.S.A.
                                         </div>
                                     </li>
-                                </ul>
+                                </ul> -->
                                 <div style="height: 30px; clear: both;"></div>
                                                                
 
