--- a/cic2025/organizers/index.html
+++ b/cic2025/organizers/index.html
@@ -246,17 +246,18 @@ title: "blank"
                                 <h4 id="Publicity">Finance and Local Arrangements Chairs</h4>
                                 <ul>
                                     <li class="person-card">
-                                        <div>TBD
-                                            <!-- <a href="https://www.irit.fr/~Mohand.Boughanem/index_en.php">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Mohand_Boughanem.jpg">Mohand Boughanem</a>
-                                            IRIT, Toulouse, France -->
+                                        <div>
+                                            <a href="https://www.engineering.pitt.edu/people/faculty/mai-abdelhakim/">
+                                                <img src="{{ site.baseurl }}/assets/img/organizers/mai.jpeg">Mai Abdelhakim</a>
+                                                University of Pittsburgh, U.S.A
                                         </div>
                                     </li>
                                     <li class="person-card">
-                                        <div>TBD
-                                            <!-- <a href="https://www.computing.dcu.ie/~cgurrin/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Cathal_Gurrin.jpg">Cathal Gurrin</a>
-                                            Dublin City University, Ireland -->
+                                        <div>
+                                            <a href="https://www.utech.edu.jm/academics/colleges-faculties/fenc/faculty-staff/jarrett-julian">
+                                                <img src="{{ site.baseurl }}/assets/img/organizers/julian.jpeg">Jarrett Julian</a>
+                                                University of Technology, Jamaica, & <br>
+                                                Lutron Electronics, U.S.A
                                         </div>
                                     </li>
 
