--- a/CogMI2025/call-for-sponsors/index.html
+++ b/CogMI2025/call-for-sponsors/index.html
@@ -11,7 +11,7 @@ title: "Call for Sponsorships"
 <html lang="en"> <!--<![endif]-->
 
 <head>
-    <title>CIC 2025</title>
+    <title>IEEE CogMI 2025</title>
     {% include head.html %}
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/header-v3.css">
 </head>
@@ -44,14 +44,14 @@ title: "Call for Sponsorships"
                     <div class="news-v3-in">
                         <h2><strong>Call for Sponsorships</strong></h2>
 
-                        <p>IEEE CIC welcomes and highly appreciates sponsorship support from interested Industry,
+                        <p>IEEE CogMI welcomes and highly appreciates sponsorship support from interested Industry,
                             Government
                             or Academia. Various levels of sponsorships and benefits are as follows. If you have
                             interest
                             beyond or outside these packages please do contact us (Amirreza Masoumzadeh:
                             <a href="mailto:amasoumzadeh@albany.edu">amasoumzadeh [AT] albany [DOT] edu</a>).
                         </p>
-                        <p>Based on the amount you donate, you will qualify for one of the following CIC Corporate
+                        <p>Based on the amount you donate, you will qualify for one of the following IEEE CogMI Corporate
                             Sponsorship levels (in US dollars or equivalent):</p>
 
                         <!--this table hidden on mobile,show on pc&pad-->
@@ -246,7 +246,7 @@ title: "Call for Sponsorships"
                             <li>Your logo and URL on the CIC 2025 Web site</li>
                             <li>Access to students for potential employment opportunities</li>
                         </ul> -->
-                        <p>If you are interested to become a sponsor for CIC 2025 in any of these capacities or in other
+                        <p>If you are interested to become a sponsor for IEEE CogMI 2025 in any of these capacities or in other
                             ways, please contact the conference co-chairs or the sponsorship co-chairs.</p>
                         <p>&nbsp;</p>
                         <h3><strong>We look forward to seeing you soon! </strong></h3>
