--- a/tps2025/organizers/index.html
+++ b/tps2025/organizers/index.html
@@ -66,7 +66,7 @@ title: "blank"
                         <div class="col-md-9">
                             <div id="organizers">
 
-                                <h2>Conference Organization</h2>
+                                <h2>Organizing Commmittee</h2>
                                 <h4 id="General">Executive Chairs of the Co-located Conferences</h4>
                                 <ul>
                                     <li class="person-card">
@@ -255,7 +255,7 @@ title: "blank"
                                     <li class="person-card">
                                         <div>
                                             <a href="https://www.utech.edu.jm/academics/colleges-faculties/fenc/faculty-staff/jarrett-julian">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/julian.jpeg">Jarrett Julian</a>
+                                                <img src="{{ site.baseurl }}/assets/img/organizers/julian.jpeg">Julian Jarrett</a>
                                                 University of Technology, Jamaica, & <br>
                                                 Lutron Electronics, U.S.A
                                         </div>
