--- a/cic2025/organizers/index.html
+++ b/cic2025/organizers/index.html
@@ -71,8 +71,9 @@ title: "blank"
                                 <ul>
                                     <li class="person-card">
                                         <div>
-                                            <!-- <a target="_blank" href="http://yichang-cs.com/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Yi_Chang.jpg">TBD</a> -->
+                                            <a target="_blank" href="https://shi.buaa.edu.cn/xurunhua/en/more/203697/jsjjgd/index.htm">
+                                                <img src="{{ site.baseurl }}/assets/img/organizers/elena.jpeg">Elena Ferrari</a>
+                                                University of Insubria, Italy
                                             
                                         </div>
                                     </li>
@@ -221,10 +222,10 @@ title: "blank"
                                 <h4 id="SummerSchool">Workshop Co-Chairs</h4>
                                 <ul>
                                     <li class="person-card">
-                                        <div>TBD
-                                            <!-- <a href="https://cs.uwaterloo.ca/about/people/claclark">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Charlie_Clarke.jpg">Charlie Clarke</a>
-                                            University of Waterloo, Canada -->
+                                        <div>
+                                            <a target="_blank" href="https://shi.buaa.edu.cn/xurunhua/en/more/203697/jsjjgd/index.htm">
+                                                <img src="{{ site.baseurl }}/assets/img/organizers/runhua.jpeg">Runhua Xu</a>
+                                                Beihang University, China
                                         </div>
                                     </li>
                                      <li class="person-card">
@@ -243,7 +244,7 @@ title: "blank"
                                     </li>
                                 </ul>
 
-                                <h4 id="Publicity">Finance and Local Arrangements Chairs</h4>
+                                <h4 id="Publicity">Finance and Local Arrangements C0-Chairs</h4>
                                 <ul>
                                     <li class="person-card">
                                         <div>
@@ -255,7 +256,7 @@ title: "blank"
                                     <li class="person-card">
                                         <div>
                                             <a href="https://www.utech.edu.jm/academics/colleges-faculties/fenc/faculty-staff/jarrett-julian">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/julian.jpeg">Jarrett Julian</a>
+                                                <img src="{{ site.baseurl }}/assets/img/organizers/julian.jpeg">Julian Jarrett</a>
                                                 University of Technology, Jamaica, & <br>
                                                 Lutron Electronics, U.S.A
                                         </div>
@@ -263,13 +264,13 @@ title: "blank"
 
                                 </ul>
 
-                                <h4 id="DoctoralConsortium">Proceedings Chair</h4>
+                                <h4 id="DoctoralConsortium">Proceedings Co-Chair</h4>
                                 <ul>
                                     <li class="person-card">
-                                        <div>TBD
-                                            <!-- <a target="_blank" href="http://www.gabriella-kazai.com/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Gabriella_Kazai.jpeg">Gabriella Kazai</a>
-                                                Microsoft, U.K. -->
+                                        <div>
+                                            <a target="_blank" href="https://shi.buaa.edu.cn/xurunhua/en/more/203697/jsjjgd/index.htm">
+                                                <img src="{{ site.baseurl }}/assets/img/organizers/runhua.jpeg">Runhua Xu</a>
+                                                Beihang University, China
                                         </div>
                                     </li> 
                                     <li class="person-card">
@@ -289,7 +290,7 @@ title: "blank"
                                     
                                 </ul>
 
-                                <h4 id="Workshop">Publicity Chairs</h4>
+                                <h4 id="Workshop">Publicity Co-Chairs</h4>
                                 <ul>
                                     <li class="person-card">
                                         <div>
@@ -307,7 +308,7 @@ title: "blank"
                                     </li>
                                 </ul>
 
-                                <h4 id="DemonstrationPaper">Web Chairs</h4>
+                                <h4 id="DemonstrationPaper">Web Co-Chairs</h4>
                                 <ul>
                                     <li class="person-card">
                                         <div>
