--- a/CogMI2025/organizers/index.html
+++ b/CogMI2025/organizers/index.html
@@ -11,7 +11,7 @@ title: "blank"
 <!--[if !IE]><!-->
 <html lang="en"> <!--<![endif]-->
 <head>
-    <title>IEEE TPS 2025</title>
+    <title>IEEE CogMI 2025</title>
     {% include head.html %}
 </head>
 
@@ -227,7 +227,7 @@ title: "blank"
                                                     Beihang University, China
                                               
                                         </div>
-                                    </li>z
+                                    </li>
                                      <li class="person-card">
                                         <div>TBD
                                             <!-- <a href="http://www.bigdatalab.ac.cn/~lanyanyan/">
