--- a/cic2025/organizers/index.html
+++ b/cic2025/organizers/index.html
@@ -71,6 +71,15 @@ title: "blank"
                                 <ul>
                                     <li class="person-card">
                                         <div>
+                                            <a target="_blank" href="https://dawsec.dicom.uninsubria.it/barbara.carminati/">
+                                                <img src="{{ site.baseurl }}/assets/img/organizers/barbara.jpeg">Barbara Carminati</a>
+                                                University of Insubria, Italy
+                                            
+                                        </div>
+                                    </li>
+
+                                    <li class="person-card">
+                                        <div>
                                             <a target="_blank" href="https://shi.buaa.edu.cn/xurunhua/en/more/203697/jsjjgd/index.htm">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/elena.jpeg">Elena Ferrari</a>
                                                 University of Insubria, Italy
@@ -85,15 +94,6 @@ title: "blank"
                                                 Howard University, U.S.A
                                         </div>
                                     </li>
-
-                                    <li class="person-card">
-                                        <div>
-                                            <!-- <a target="_blank" href="http://www.yorku.ca/jhuang/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Jimmy_Huang.jpg">Jimmy Huang</a>
-                                            York University, Canada -->
-                                        </div>
-                                    </li>
-
                                 </ul>
 
                                 <h4 id="Vice">General Co-Chairs</h4>
