--- a/cic2025/organizers/index.html
+++ b/cic2025/organizers/index.html
@@ -106,7 +106,7 @@ title: "blank"
                                         </div>
                                     </li>
                                 </ul>
-                                <h4 id="Program">Program co-Chairs</h4>
+                                <h4 id="Program">Program Co-Chairs</h4>
                                 <ul>
                                     <li class="person-card">
                                         <div>
@@ -244,7 +244,7 @@ title: "blank"
                                     </li>
                                 </ul>
 
-                                <h4 id="Publicity">Finance and Local Arrangements C0-Chairs</h4>
+                                <h4 id="Publicity">Finance and Local Arrangements Co-Chairs</h4>
                                 <ul>
                                     <li class="person-card">
                                         <div>
