--- a/tps2025/404.html
+++ b/tps2025/404.html
@@ -13,7 +13,7 @@ permalink: /404.html
 <!--<![endif]-->
 
 <head>
-  <title>CIC 2025 - Page not found</title>
+  <title>TPS 2025 - Page not found</title>
   {% include head.html %}
   <!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/header-v3.css"> -->
 </head>
