correct paolo's profile

--- a/CogMI2025/organizers/index.html
+++ b/CogMI2025/organizers/index.html
@@ -109,12 +109,12 @@ title: "blank"
                                 <ul>
                                     <li class="person-card">
                                         <div>
-                                            <a href="https://kairouzp.github.io/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/peter.jpg">Peter Kairouz</a>
-                                                Research Scientist at Google, U.S.A
+                                            <a href="https://boldi.di.unimi.it/">
+                                                <img src="{{ site.baseurl }}/assets/img/organizers/paolo.jpg">Paolo Boldi</a>
+                                                University of Milano, Italy
                                         </div>
                                     </li>
-                                    <li class="person-card">
+                                    <!-- <li class="person-card">
                                         <div>
                                             <a href="https://engineering.vanderbilt.edu/bio/?pid=dan-lin">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/danlin.jpg">Dan Lin</a>
@@ -127,7 +127,7 @@ title: "blank"
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/attila.jpg">Attila Altay Yavuz</a>
                                                 University of South Florida, U.S.A
                                         </div>
-                                    </li>
+                                    </li> -->
 
                                 </ul>
                                 <h4 id="ShortPaperProgram">Blue-Sky/ Vision Track Co-Chairs</h4>
