--- a/CogMI2025/call-for-full-papers/index.html
+++ b/CogMI2025/call-for-full-papers/index.html
@@ -315,7 +315,7 @@ title: "Call for Full Papers pages"
 
                         <h3><strong>Program Co-Chairs</strong></h3>
                         <ul>
-                            <li></li>
+                            <li>Paolo Boldi, University of Milano, Italy</li>
                         </ul>
                     </div>
                 </div>
