--- a/CogMI2025/steerings/index.html
+++ b/CogMI2025/steerings/index.html
@@ -39,10 +39,12 @@ title: "blank"
 
 
     <div class="bg-color-light">
-        <div class="container content-xs">
+        <div class="container-fluid" style="padding-left: 0 !important;
+            padding-right: 0 !important;">
             <div class="news-v3 margin-bottom-30">
                 {% include banner.html %}
                 <!-- Contents goes here -->
+                <div class="col-md-8" style="margin-left: 3%;"><!-- outter container  -->
                 <div class="news-v3-in">
                     <div class="row">
                         <div class="col-md-3">
@@ -65,7 +67,7 @@ title: "blank"
                                     </li>
                                 </ul>
 
-                                <h4 id="General">Members</h4>
+                                <h4 id="Members">Members</h4>
                                 <ul>
                                     <li >
                                         <i>Arun Iyengar, Cisco, USA</i>
@@ -107,6 +109,9 @@ title: "blank"
                         </div>
                     </div>
                 </div>
+                </div><!-- end outter container  -->
+                <!-- right panel begins -->
+                {% include sidebar.html %}
     </div>
 </div>
 <!--=== End Content ===-->
