--- a/CogMI2025/call-for-full-papers/index.html
+++ b/CogMI2025/call-for-full-papers/index.html
@@ -39,12 +39,14 @@ title: "Call for Full Papers pages"
         </div>
 
         <div class="bg-color-light">
-            <div class="container-fluid" style="padding-left: 0 !important;
-            padding-right: 0 !important;">
-                <div class="news-v3 margin-bottom-30">
-                    {% include banner.html %}
+
+            <div class="news-v3 margin-bottom-30">
+                {% include banner.html %}
+            </div>
+            <div class="container">
+                <div class="row">
                     <!-- Contents goes here -->
-                    <div class="col-md-8" style="margin-left: 3%;"><!-- outter container  -->
+                    <div class="col-md-8"><!-- outter container  -->
                         <div class="news-v3-in">
 
                             <h2 class="margin-bottom-5" style="margin-bottom: 0">
@@ -350,22 +352,23 @@ title: "Call for Full Papers pages"
                         </div>
                     </div>
                     <!-- right panel begins -->
-                    {% include sidebar.html %}
+                    <div>
+                        {% include sidebar1.html %}
+                    </div>
                 </div>
             </div>
         </div>
-        <!--/end container-->
-    </div>
-    <!--=== End Content ===-->
+
+        <!--=== End Content ===-->
 
 
-    <!--=== Footer ===-->
-    {% include footer.html %}
-    <!--=== End Footer ===-->
+        <!--=== Footer ===-->
+        {% include footer.html %}
+        <!--=== End Footer ===-->
 
-    <!--=== Scripts ===-->
-    {% include scripts.html %}
-    <!--=== End scripts ===-->
+        <!--=== Scripts ===-->
+        {% include scripts.html %}
+        <!--=== End scripts ===-->
 
 </body>
 
