--- a/CogMI2025/pcs/index.html
+++ b/CogMI2025/pcs/index.html
@@ -40,12 +40,13 @@ title: "blank"
 
 
         <div class="bg-color-light">
-            <div class="container-fluid" style="padding-left: 0 !important;
-            padding-right: 0 !important;">
-                <div class="news-v3 margin-bottom-30">
-                    {% include banner.html %}
-                    <!-- Contents goes here -->
-                    <div class="col-md-8" style="margin-left: 3%;"><!-- outter container  -->
+            <div class="news-v3 margin-bottom-30">
+                {% include banner.html %}
+            </div>
+            <div class="container">
+                <!-- Contents goes here -->
+                <div class="row">
+                    <div class="col-md-9"><!-- outter container  -->
                         <div class="news-v3-in">
                             <div class="row">
                                 <div class="col-md-3">
@@ -201,8 +202,11 @@ title: "blank"
                                 </div>
                             </div>
                         </div>
-                    </div><!-- end outter container  -->
-                    {% include sidebar.html %}
+                    </div><!-- end inner container  -->
+                     <!-- Sidebar -->
+                    <div>
+                        {% include sidebar.html %}
+                    </div>
                 </div>
             </div>
             <!--=== End Content ===-->
