--- a/tps2025/index.html
+++ b/tps2025/index.html
@@ -47,9 +47,12 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
             <h1 class="animated fadeInUp">IEEE TPS 2025</h1>
 
             <!-- <h1 class="animated fadeInUp">Virtual Conference</h1> -->
-            <p class="animated fadeInRight" id="sub_title">7<sup>th</sup> IEEE International Conference on Trust, Privacy and Security in Intelligent Systems, and Applications
+            <p class="animated fadeInRight" id="sub_title">The 7<sup>th</sup> IEEE International Conference on Trust, Privacy and Security in Intelligent Systems, and Applications
             </p>
             <p class="animated fadeInLeft">TBD, Pittsburgh, USA</p>
+            <p class="animated fadeInLeft">
+                Co-located with <a style="color: rgb(219, 190, 26);" href="https://www.sis.pitt.edu/lersais/conference/cic/2025/" target="_blank">IEEE CIC 2025</a> and <a style="color: rgb(219, 190, 26);" href="https://www.sis.pitt.edu/lersais/conference/cogmi/2025/" target="_blank">IEEE CogMI 2025</a>
+            </p>
         </div>
     </div>
     <!-- End Image Gradient -->
