add: people, banner. del: side panel

--- a/CogMI2025/index.html
+++ b/CogMI2025/index.html
@@ -47,10 +47,13 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
             <h1 class="animated fadeInUp">IEEE CogMI 2025</h1>
 
             <!-- <h1 class="animated fadeInUp">Virtual Conference</h1> -->
-            <p class="animated fadeInRight" id="sub_title">7<sup>th</sup> IEEE International Conference on Cognitive
+            <p class="animated fadeInRight" id="sub_title">The 7<sup>th</sup> IEEE International Conference on Cognitive
                 Machine Intelligence
             </p>
             <p class="animated fadeInLeft">Nov.11-14, 2025 (TBC), Pittsburgh, USA</p>
+            <p class="animated fadeInLeft">
+                Co-located with <a style="color: rgb(219, 190, 26);" href="https://www.sis.pitt.edu/lersais/conference/cic/2025/" target="_blank">IEEE CIC 2025</a> and <a style="color: rgb(219, 190, 26);" href="https://www.sis.pitt.edu/lersais/conference/tps/2025/" target="_blank">IEEE TPS 2025</a>
+            </p>
         </div>
     </div>
     <!-- End Image Gradient -->
