--- a/tps2025/call-for-full-papers/index.html
+++ b/tps2025/call-for-full-papers/index.html
@@ -12,7 +12,7 @@ title: "Call for Full Papers pages"
 <!--<![endif]-->
 
 <head>
-    <title>IEEE CogMI 2025</title>
+    <title>IEEE TPS 2025</title>
     {% include head.html %}
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/header-v3.css">
 </head>
