Jerry Jialie Shen General Chair

--- a/CogMI2025/index.html
+++ b/CogMI2025/index.html
@@ -4891,36 +4891,10 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                         </ul>
                     </div>
                     <!-- sponsor ends -->
-
-                    <!-- <iframe name="f99218c3348b54" title="fb:page Facebook Social Plugin" frameborder="0"
-                            allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media"
-                            src="https://www.facebook.com/v5.0/plugins/page.php?adapt_container_width=true&amp;app_id=&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D44%23cb%3Df2ce30841cd05e%26domain%3D%26origin%3Dfile%253A%252F%252F%252Ff1d62ad0a1fab14%26relation%3Dparent.parent&amp;height=650&amp;hide_cover=true&amp;href=https%3A%2F%2Fwww.facebook.com%2Fsigir2020&amp;locale=en_us&amp;sdk=joey&amp;show_facepile=true&amp;small_header=true&amp;tabs=timeline"
-                            style="border: none; visibility: visible; width:100%; height: 650px;" class="">
-                        </iframe> -->
-                    <!-- ===== social media icons END -->
                 </div>
                 
 
                 <!--Logos-->
-
-
-
-                <!-- <div class="col-md-6 col-xs-12">
-                        <div class="row">
-                            <div class="col-md-3 col-xs-3">
-                                <img class="img-responsive" src="assets/img/logos/Xidian_University.png" style="width: 95%; margin-top: 2%; margin-left: 5%;">
-                            </div>
-                            <div class="col-md-3 col-xs-3">
-                                <img class="img-responsive" src="assets/img/logos/cas.png" style="width: 92%; margin-top: 2%; margin-left: 10%;">
-                            </div>
-                            <div class="col-md-3 col-xs-3">
-                                <img class="img-responsive" src="assets/img/logos/jilin_university.jpg" style="width: 92%; margin-top: 2%; margin-left: 5%;">
-                            </div>
-                            <div class="col-md-3 col-xs-3">
-                                <img class="img-responsive" src="assets/img/logos/thu.jpg" style="width: 92%; margin-top: 2%;">
-                            </div>
-                        </div>
-                    </div> -->
             </div>
             <!--Logos END-->
         </div>
@@ -4949,9 +4923,19 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
             });
 
             // Show the first keynoteContent by default
-            const firstContent = document.getElementById('content1');
-            if (firstContent) {
-                firstContent.style.display = 'block';
+            const content1 = document.getElementById('content1');
+            if (content1) {
+                content1.style.display = 'block';
+                document.getElementById('1').classList.add('open');
+            }
+            const content4 = document.getElementById('content4');
+            if (content4) {
+                content4.style.display = 'block';
+                document.getElementById('1').classList.add('open');
+            }
+            const content8 = document.getElementById('content8');
+            if (content8) {
+                content8.style.display = 'block';
                 document.getElementById('1').classList.add('open');
             }
 
