--- a/CogMI2025/organizers/index.html
+++ b/CogMI2025/organizers/index.html
@@ -55,30 +55,6 @@ title: "blank"
                     <div class="col-md-9" ><!-- outter container  -->
                         <div class="news-v3-in">
                             <div class="row">
-                                <!-- <div class="col-md-3">
-                                    <ul class="no-padding margin-left-10 organizers-type-list hidden-xs"
-                                        id="sidebar-nav">
-                                        
-
-                                        <li class=""><a href="#General">Executive Chairs of the Co-located
-                                                Conferences</a>
-                                        </li>
-                                        <li class=""><a href="#Vice">General Co-Chairs</a></li>
-                                        <li class=""><a href="#Program">Program Co-Chairs</a></li>
-                                        <li class=""><a href="#ShortPaperProgram">Blue-Sky/ Vision Track
-                                                Co-Chairs</a>
-                                        </li>
-                                        <li class=""><a href="#BestPaper">Industry/Government Co-Chairs</a></li>
-                                        <li class=""><a href="#TestofTimeAward">Tutorial Co-Chairs</a></li>
-                                        <li class=""><a href="#Industry">Sponsorship Co-Chairs</a></li>
-                                        <li class=""><a href="#SummerSchool">Workshop Co-Chairs</a></li>
-                                        <li class=""><a href="#Publicity">Finance and Local Arrangements Chairs</a>
-                                        </li>
-                                        <li class=""><a href="#DoctoralConsortium">Proceedings Chairs</a></li>
-                                        <li class=""><a href="#Workshop">Publicity Chairs</a></li>
-                                        <li class=""><a href="#DemonstrationPaper">Web Co-Chairs</a></li>
-                                    </ul>
-                                </div> -->
                                 <div class="col-md-12">
                                     <div id="organizers">
 
@@ -101,15 +77,12 @@ title: "blank"
                                                         <img
                                                             src="{{ site.baseurl }}/assets/img/organizers/danda.png">Danda
                                                         Rawat</a>
-                                                    <span class="affiliation">Howard University, U.S.A</span>
+                                                    <span class="affiliation">Howard University, U.S.A.</span>
                                                 </div>
                                             </li>
 
                                             <li class="person-card">
                                                 <div>
-                                                    <!-- <a target="_blank" href="http://www.yorku.ca/jhuang/">
-                                            <img src="{{ site.baseurl }}/assets/img/organizers/Jimmy_Huang.jpg">Jimmy Huang</a>
-                                        York University, Canada -->
                                                 </div>
                                             </li>
 
@@ -118,10 +91,12 @@ title: "blank"
                                         <h4 id="Vice">General Co-Chairs</h4>
                                         <ul>
                                             <li class="person-card">
-                                                <div>TBD
-                                                    <!-- <a target="_blank" href="http://www.thuir.cn/group/~YQLiu/">
-                                            <img src="{{ site.baseurl }}/assets/img/organizers/Yiqun_Liu.jpg">Yiqun Liu</a>
-                                        Tsinghua University, China -->
+                                                <div>
+                                                    <a  target="_blank" href="https://www.citystgeorges.ac.uk/about/people/academics/jialie-shen">
+                                                        <img src="{{ site.baseurl }}/assets/img/organizers/jerry.jpg">
+                                                        Jerry Jialie Shen
+                                                    </a>
+                                                    <span class="affiliation">City St George's, University of London, U.K.</span>
                                                 </div>
                                             </li>
                                         </ul>
@@ -144,7 +119,7 @@ title: "blank"
                                                     <a target="_blank" href="https://sse.umkc.edu/profiles/shyu-mei-ling.html">
                                                         <img
                                                             src="{{ site.baseurl }}/assets/img/organizers/mei-lin.jpg">Mei-Ling Shyu</a>
-                                                    <span class="affiliation">University of Missouri-Kansas City, U.S.A</span>
+                                                    <span class="affiliation">University of Missouri-Kansas City, U.S.A.</span>
                                                 </div>
                                             </li>
                                             <li class="person-card">
@@ -152,7 +127,7 @@ title: "blank"
                                                     <a target="_blank" href="https://ecs.syracuse.edu/faculty-staff/reza-zafarani">
                                                         <img
                                                             src="{{ site.baseurl }}/assets/img/organizers/reza.jpg">Reza Zafarani</a>
-                                                    <span class="affiliation">Syracuse University, U.S.A</span>
+                                                    <span class="affiliation">Syracuse University, U.S.A.</span>
                                                 </div>
                                             </li>
 
@@ -165,7 +140,7 @@ title: "blank"
                                                         <img
                                                             src="{{ site.baseurl }}/assets/img/organizers/huanliu.jpg">Huan
                                                         Liu</a>
-                                                    <span class="affiliation">Arizona State University, U.S.A</span>
+                                                    <span class="affiliation">Arizona State University, U.S.A.</span>
                                                 </div>
                                             </li>
                                             
